# making-formulog-fast

./: .gitignore  Dockerfile  README.md  setup_ubuntu_x86.sh
434/: README.md
artifact/: README.md
benchmarks/dminor/: bench.flg
benchmarks/scuba/: bench.flg
benchmarks/symex/: bench.flg
docs/: README.md
lib/: z3.patch
paper-results/regular/: results.csv  stats.txt
paper-results/regular/figures/: tab2.tex
paper-results/regular/raw/: dminor__all-100__pp__compile-reorder__00.txt  dminor__all-100__pp__compile-reorder__01.txt  dminor__all-100__pp__compile-reorder__02.txt  dminor__all-100__pp__compile-reorder__03.txt  dminor__all-100__pp__compile-reorder__04.txt  dminor__all-100__pp__compile-reorder__05.txt  dminor__all-100__pp__compile-reorder__06.txt  dminor__all-100__pp__compile-reorder__07.txt  dminor__all-100__pp__compile-reorder__08.txt  dminor__all-100__pp__compile-reorder__09.txt  dminor__all-100__pp__compile-unbatched__00.txt  dminor__all-100__pp__compile-unbatched__01.txt  dminor__all-100__pp__compile-unbatched__02.txt  dminor__all-100__pp__compile-unbatched__03.txt  dminor__all-100__pp__compile-unbatched__04.txt  dminor__all-100__pp__compile-unbatched__05.txt  dminor__all-100__pp__compile-unbatched__06.txt  dminor__all-100__pp__compile-unbatched__07.txt  (+1094 more)
paper-results/scaling/: results.csv  scaling_analysis.ipynb
scripts/: CMakeLists.txt  analysis.ipynb  analysis.py  bench.py  bench_one.sh  count_sloc.sh  eval_compiler.sh  eval_references.sh  full_eval.sh  kicktires.sh  process_logs.py  scaling.sh  scaling_analysis.ipynb  summarize_kicktires.py
(+437 files in other folders)
